# benchmark-framework

./: .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  directives.md  journal.md  pyproject.toml
.github/workflows/: test.yml
examples/demo/: iterations.json  runs.json
examples/demo/iterations/v1_baseline/: main.py
examples/demo/iterations/v2_optimized/: main.py
schemas/: iterations.schema.json  metrics.schema.json  results.schema.json  runs.schema.json
scripts/: export_schemas.py
src/benchmark_framework/: __init__.py  __main__.py  api.py  models.py  registry.py  reporter.py  runner.py
src/benchmark_framework/metrics/: __init__.py  base.py  decorators.py  timing.py
tests/: conftest.py  test_metrics.py  test_models.py  test_registry.py  test_reporter.py  test_runner.py
tests/fixtures/: iterations.json  metrics.json  runs.json
tests/fixtures/sample_iteration/: main.py
